docs(plan): update architecture for JDA sidecar + Docker-first deployment
- Lock Discord library to JDA 6.3.0 + JDAVE 0.1.8 (only confirmed working
  DAVE voice receive); drop Pycord references from decisions table
- Document JDA sidecar approach: Gradle fat JAR, Unix socket IPC,
  length-prefixed PCM frame protocol, 48→16 kHz downsample in Python
- Add Docker deployment strategy section: single-image approach (Java baked
  into existing Dockerfile via multi-stage build), required docker-compose
  changes, MLX limitation explained (Linux VM = no Metal/ANE access)
- Update auto-rejoin policy to remove stale discord.py issue reference

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>